--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ outbound-transport:
 admin: [0.0.0.0, 8002]
 # TODO: ADMIN_API_KEY
 admin-insecure-mode: true
-#webhook-url: ${WEBHOOK_URL}
+webhook-url: ${WEBHOOK_URL}
 auto-provision: true
 public-invites: true
 wallet-type: askar
