--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - ADMIN_API_KEY=secure-key
       - JWT_SECRET=secure-jwt
       - WALLET_KEY=secure-wallet-key
+      - WEBHOOK_URL=http://host.docker.internal:8084/backend/user/webhook
 networks:
   default:
     name: ticket-network
